[package]
name = "retime"
version = "0.0.1"
authors = ["Nikita Zemtsov <z-nik@ya.ru>"]
edition = "2018"
resolver = "2"


[dependencies.dotrix]
git = "https://github.com/lowenware/dotrix"
rev = "2b67d1c927c03dc6c36d89f357d90eeaf5b48ba1"

[dependencies.rapier3d]
version = "0.11.1"
features = [ "simd-stable" ]
