[package]
name = "retime"
version = "0.0.1"
authors = ["Nikita Zemtsov <z-nik@ya.ru>"]
edition = "2018"
resolver = "2"


[dependencies.dotrix]
git = "https://github.com/lowenware/dotrix"
rev = "5832d64846e24ee7fc5b264f78e4da6a9b3f5f4e"

[dependencies.rapier3d]
version = "0.11.1"
features = [ "simd-stable" ]
