[package]
name = "retime"
version = "0.0.1"
authors = ["Nikita Zemtsov <z-nik@ya.ru>"]
edition = "2018"
resolver = "2"


[dependencies.dotrix]
git = "https://github.com/lowenware/dotrix"
rev = "728d4b5a03c01807dacd5a00d579510fd53ee27b"

[dependencies.rapier3d]
version = "0.11.1"
features = [ "simd-stable" ]
